--- a/policy.html
+++ b/policy.html
@@ -4,120 +4,83 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Fireworks Play Show Simulator</title>
-    <link rel="icon" href="img/1.png" />
+    <title>Scribble It! | Draw, Guess, Laugh!</title>
+    <link rel="icon" href="img/image 1.png" />
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
 
   <body>
-    <header class="class-header">
-      <div class="class-header-background"></div>
-      <nav class="class-navigation">
-        <ul class="class-navigation-list">
-          <li class="class-navigation-item">
-            <a href="/" class="class-navigation-link">
-              <img
-                href="/"
-                class="class-title-img class-navigation-img"
-                alt=""
-              />
-            </a>
+    <header class="t-a-header">
+      <div class="t-a-header-background"></div>
+      <nav class="t-a-navigation">
+        <ul class="t-a-navigation-list">
+          <li class="t-a-navigation-item">
+            <a href="/" class="t-a-navigation-link">Home</a>
           </li>
-          <li class="class-navigation-item">
-            <a href="/" class="class-navigation-link">Home</a>
+          <li class="t-a-navigation-item">
+            <a href="/#about" class="t-a-navigation-link">Game Description</a>
           </li>
-          <li class="class-navigation-item">
-            <a href="/#why" class="class-navigation-link">Why Us?</a>
+          <li class="t-a-navigation-item">
+            <a href="/#gallery" class="t-a-navigation-link">Gallery</a>
           </li>
-          <li class="class-navigation-item">
-            <a href="/#uniqueness" class="class-navigation-link"
-              >Our Uniqueness</a
-            >
+          <li class="t-a-navigation-item">
+            <a href="/#how" class="t-a-navigation-link">How to Play</a>
           </li>
-          <li class="class-navigation-item">
-            <a href="/#about" class="class-navigation-link">About the Game</a>
+          <li class="t-a-navigation-item">
+            <a href="/#why" class="t-a-navigation-link">Reviews</a>
           </li>
-          <li class="class-navigation-item">
-            <a href="/#how" class="class-navigation-link">How to Play</a>
-          </li>
-          <li class="class-navigation-item">
-            <a href="/#characters" class="class-navigation-link">Characters</a>
-          </li>
-          <li class="class-navigation-item">
-            <a href="/#reviews" class="class-navigation-link">User Reviews</a>
-          </li>
-          <li class="class-navigation-item">
-            <a href="/#faq" class="class-navigation-link">FAQ</a>
-          </li>
-          <li class="class-navigation-item">
-            <a href="/#gallery" class="class-navigation-link">Gallery</a>
-          </li>
-          <li class="class-navigation-item">
-            <a href="/#features" class="class-navigation-link"
-              >Special Features</a
-            >
-          </li>
-          <li class="class-navigation-item">
-            <a
-              href="/policy.html"
-              class="class-navigation-link class-navigation-item-desk"
-            >
-              Privacy Policy
-            </a>
-          </li>
-          <li class="class-navigation-item">
-            <a
-              href="/terms.html"
-              class="class-navigation-link class-navigation-item-desk"
-            >
-              Terms and Conditions
-            </a>
-          </li>
-          <li class="class-navigation-item">
-            <a
-              href="/cookies.html"
-              class="class-navigation-link class-navigation-item-desk"
-            >
-              Cookies Policy
-            </a>
+
+          <li class="t-a-navigation-item">
+            <a href="/#faq" class="t-a-navigation-link">FAQ</a>
           </li>
         </ul>
 
-        <div class="class-header-button-wrapper">
-          <a href="/" class="class-policy-terms-header-icon-menu">
-            <img href="/" class="class-title-img" alt="" />
+        <div class="t-a-header-button-wrapper">
+          <a href="/" class="t-a-policy-terms-header-icon-menu">
+            <img href="/" class="t-a-title-img" />
           </a>
 
-          <button
-            type="button"
-            class="class-header-icon-button"
-            data-menu-button
-          >
+          <button type="button" class="t-a-header-icon-button" data-menu-button>
             <img
-              class="class-header-icon class-header-icon-menu"
-              src="img/header/menu.png"
-              alt=""
+              class="t-a-header-icon t-a-header-icon-menu"
+              src="img/Frame 261 (1).png"
+              width="50"
+              height="50"
+              alt="menu "
             />
-            <img
-              class="class-header-icon class-header-icon-close"
-              src="img/header/menu (1).png"
-              alt=""
-            />
+            <svg
+              class="t-a-header-icon t-a-header-icon-close"
+              width="50"
+              height="50"
+              viewBox="0 0 50 50"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect width="50" height="50" rx="25" fill="white" />
+              <path
+                d="M19.5 31.5L25.5 25.5L31.5 19.5M31.5 31.5L19.5 19.5"
+                stroke="black"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
           </button>
         </div>
       </nav>
     </header>
 
     <main>
-      <section>
-        <div class="class-policy-terms-container">
-          <h1>Privacy Policy</h1>
-
-          <p>Last Updated: 2025-04-13</p>
+      <section class="t-a-policy-terms">
+        <div class="t-a-policy-terms-container">
+          <div>
+            <h1>Privacy Policy</h1>
+          </div>
+          <p>Last Updated: 2025-06-19</p>
           <p>
-            This Privacy Policy applies to the fireworksmatch.com website
+            This Privacy Policy applies to the codejise.site website
             (hereinafter referred to as "Website"). By accessing or using our
             services, you agree to the collection and use of information as
             described in this policy.
@@ -163,7 +126,7 @@
           <ul>
             <li>
               <a
-                class="class-email-link"
+                class="t-a-email-link"
                 href="https://policies.google.com/privacy"
                 target="_blank"
                 rel=""
@@ -172,7 +135,7 @@
             </li>
             <li>
               <a
-                class="class-email-link"
+                class="t-a-email-link"
                 href="https://firebase.google.com/support/privacy"
                 target="_blank"
                 rel=""
@@ -181,7 +144,7 @@
             </li>
             <li>
               <a
-                class="class-email-link"
+                class="t-a-email-link"
                 href="https://www.facebook.com/about/privacy/update/printable"
                 target="_blank"
                 rel=""
@@ -226,28 +189,25 @@
           <p>
             If you have any questions or concerns about this Privacy Policy,
             please contact us at
-            <a class="class-email-link" href="mailto:info@fireworksmatch.com"
-              >info@fireworksmatch.com</a
+            <a class="t-a-email-link" href="mailto:info@codejise.site"
+              >info@codejise.site</a
             >.
           </p>
         </div>
       </section>
     </main>
 
-    <footer
-      class="class-footer"
-      style="margin: auto; background: rgba(255, 78, 177, 1)"
-    >
-      <div class="class-footer-container">
-        <div class="class-footer-wrapper">
-          <a class="class-footer-text" href="/policy.html">Privacy Policy</a>
-          <a class="class-footer-text" href="/terms.html"
+    <footer class="t-a-footer" style="margin: auto; background: #9f643a">
+      <div class="t-a-footer-container">
+        <div class="t-a-footer-wrapper">
+          <a class="t-a-footer-text" href="/policy.html">Privacy Policy</a>
+          <a class="t-a-footer-text" href="/terms.html"
             >Terms and Conditions
           </a>
-          <a class="class-footer-text" href="/cookies.html">Cookies Policy</a>
+          <a class="t-a-footer-text" href="/cookies.html">Cookies Policy</a>
         </div>
-        <p class="class-footer-copyright">
-          © 2025 fireworksmatch.com. All rights reserved
+        <p class="t-a-footer-copyright">
+          © 2025 codejise.site – All rights reserved
         </p>
       </div>
     </footer>
